--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,11 @@
 /2D3D/せんそー.pdf
 /MG/
 /MUSIC/2015/ongaku_christmas/
-/MUSIC/2016/Project 3 提出用/*.aif
 /MUSIC/2016/Project 3 提出用/*.pdf
 /MUSIC/2016/Project 3.zip
-/MUSIC/2016/Project 3/*.aif
 /MUSIC/2016/Project 3/*.pdf
 /MUSIC/2017/nannke/
+/MUSIC/*/kakidashi
 /MUSIC/hanauta/
 /OTHERS/shsh/
 /gamez/
