しっけいしっけい

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /2D3D/lego(2010~)/povray/
 /2D3D/せんそー.pages
 /2D3D/せんそー.pdf
+/2D3D/スクリーンショット 2021-12-22 20.04.57.png
 /MG/
 /MUSIC/2015/ongaku_christmas/
 /MUSIC/2016/Project 3 提出用/*.pdf
