--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 /2D3D/lego(2010~)/povray/
 /2D3D/せんそー.pages
 /2D3D/せんそー.pdf
+/2D3D/めいし2014.ai
+/2D3D/めいし2014_省インク.ai
+/2D3D/めいし2016.ai
+/2D3D/めいし2016_Outline (copy 1).ai
+/2D3D/めいし2016_Outline.ai
+/2D3D/めいし2016_Outline.png
 /2D3D/めいし2024.svg
 /2D3D/めいし2024うら.svg
 /2D3D/スクリーンショット 2021-12-22 20.04.57.png
